modified index and observers

--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
    <a  href="https://github.com/Kelbore/Guitar_School">
     <div class="card border-danger slide-in from-left work1" id="thirdProject">
       <div class="card-body">
-        <h5 class="card-title">JWD-Eatery-Git-Files</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        <h5 class="card-title">Website</h5>
+        <p class="card-text"></p>
       </div>
     </div>
    </a>
