deleted the thirdproject

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                   <h3 class="text-center">Retail</h3>
                 </div>
                 <div class="card-body">
-                  <h5 class="card-title"><span>Title:</span>Cashier</h5>
+                  <h5 class="card-title"><span>Title:</span> Cashier | Jan 2017-2021 | Atlanta, GA</h5>
                   <p class="card-text">. Provided excellent customer service</p>
                   <p class="card-text">.	Assisted with ordering and receiving merchandise (inventory)</p>
                   <p class="card-text">.	Working Independently with good problem-solving skill</p>
@@ -81,9 +81,9 @@
                   <h3 class="text-center">Bootcamp</h3>
                 </div>
                 <div class="card-body">
-                  <h5 class="card-title"><span>Title:</span>Student</h5>
-                  <p class="card-text">. Participated in bootcamp with over 450+ hours of training</p>
+                  <h5 class="card-title"><span>Title:</span>Student | March 2022 - July 2022</h5>
                   <p class="card-text">. Received W3 schools javascript certification</p>
+                  <p class="card-text">. Participated in bootcamp with over 450+ hours of training</p>
                   <p class="card-text">. Experience with HTML, CSS and JavaScript through Codecademy</p>
               </div>
         </div>
@@ -170,14 +170,7 @@
        </div>
      </div>
    </a>
-   <a  href="https://github.com/Kelbore/Guitar_School">
-    <div class="card border-danger slide-in from-left work1" id="thirdProject">
-      <div class="card-body">
-        <h5 class="card-title">Website</h5>
-        <p class="card-text"></p>
-      </div>
-    </div>
-   </a>
+ 
   </div>
 
   <div class="" id="footer">
