modified html file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Portfolio</title>
+    <title>Ariel Kelbore</title>
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Merriweather&family=Public+Sans:wght@300;400&family=Space+Mono&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;400&family=Merriweather&family=Public+Sans:wght@300;400&family=Space+Mono&display=swap" rel="stylesheet">
   </head>
@@ -37,7 +37,7 @@
   <div class="jumbotron" id ="header">
     <img src="./images/photo.jpg" alt="my picture">
      <h3 class="text-white">Ariel Kelbore</h3>
-     <h4 class="text-white">Greater Atlanta Region</h4>
+     <h4 class="text-white">Junior Web Developer</h4>
     <hr class="my-4">
     <h1 class="text-white">About me</h1>
     <p class="text-white">I am currently a junior web developer student at Generation USA. Expected date of completion: July 2022.<br>
@@ -60,7 +60,7 @@
   
   
   <div id="experience">
-    <h1 class="text-center fade-in text-white" id="firsttag">Experience</h1>
+    <h1 class="fade-in text-white" id="firsttag">Experience</h1>
     <div class="row justify-content-center" id="retail">
         <div class="col-5 slide-in from-left">
             <div class="card border-success">
@@ -81,8 +81,8 @@
                   <h3 class="text-center">Bootcamp</h3>
                 </div>
                 <div class="card-body">
-                  <h5 class="card-title"><span>Title:</span>Student | March 2022 - July 2022</h5>
-                  <p class="card-text">. Received W3 schools javascript certification</p>
+                  <h5 class="card-title"><span>Title:</span> Student | March 2022 - July 2022</h5>
+                  <p class="card-text">. Received W3 schools javascript certification<a href = "https://verify.w3schools.com/1MRIRW95EB"> click here to view</a></p>
                   <p class="card-text">. Participated in bootcamp with over 450+ hours of training</p>
                   <p class="card-text">. Experience with HTML, CSS and JavaScript through Codecademy</p>
               </div>
@@ -90,24 +90,33 @@
       </div>
     </div>
   
-      <h1 class="text-center my-5 fade-in text-white" id="code">Skills</h1>
+      <h1 class="fade-in text-white" id="code">Skills</h1>
     <div class="row justify-content-center">    
         <div class="col-5 slide-in from-left">
             <div class="card border-primary">
                 <div class="my-3">
                   <h3 class="text-center">Technical Skills</h3>
                 </div>
-                <div class="card-body">
-                  <h5 class="card-title">Languages:</h5>
-                  <p class="card-text"><h6>1. HTML</h6></p>
-                  <p class="card-text"><h6>2. CSS</h6></p>
-                  <p class="card-text"><h6>3. JavaScript</h6></p>
-                  <p class="card-text"><h6>4. Bootstrap</h6></p>
+                <div class=" row card-body">
+                  <div class="col">
+                    <p class="card-title"><h5>Languages:</h5></p>
+                    <p class="card-text"><h6>. HTML</h6></p>
+                    <p class="card-text"><h6>. CSS</h6></p>
+                    <p class="card-text"><h6>. JavaScript</h6></p>
+                    <p class="card-text"><h6>. Java</h6></p>
+                  </div>
+                  <div class="col">
+                    <p class="card-title"><h5>Frameworks/Tools:</h5></p>
+                    <p class="card-text"><h6>. Bootstrap</h6></p>
+                    <p class="card-text"><h6>. Github</h6></p>
+                    <p class="card-text"><h6>. Jekyll</h6></p>
+                    <p class="card-text"><h6>. VS Code</h6></p>
+                </div>
                 </div>
               </div>
         </div>
         <div class="col-5 slide-in from-right">
-            <div class="card border-primary">
+            <div class="card border-primary"  id="languages">
                 <div class="my-4">
                   <h3 class="text-center">Soft Skills</h3>
                 </div>
@@ -118,8 +127,7 @@
                   <p class="card-text">. Adaptability</p>
                   <p class="card-text">. Proactiveness</p>
                   <p class="card-text">. Time Management</p>
-                  <p class="card-text">. Orientation to Detail</p>  
-                  <p class="card-text">. Orientation to Detail</p>  
+                  <p class="card-text">. Orientation to Detail</p>   
                   </div>
                   <div class="col">
                   <h5 class="card-title">Mindsets:</h5>
@@ -137,24 +145,24 @@
   
   
   <div class="col" id="education">
-    <h1 class="text-center fade-in text-white" id="tag">Education</h1>
+    <h1 class="fade-in text-white" id="tag">Education</h1>
     <div class="row slide-in from-left" id="aait">
         <div class="jumbotron">
             <h1>Addis Ababa Institute of Technology(AAiT)</h1>
-            <p class="lead">. Addis Ababa Institute of Technology (AAiT) | Addis Ababa, Ethiopia | May 2016
+            <p class="lead"> Addis Ababa Institute of Technology (AAiT) | Addis Ababa, Ethiopia | May 2016
               </p>
           </div>
     </div>
     <div class="row slide-in from-right" id="generation">
         <div class="jumbotron">
             <h1>Generation USA</h1>
-            <p class="lead">•	Participating in a twelve weeks of Junior Web Developer program spending eight hours a day Monday to Friday at Generation USA: 
-              by taking HTML, CSS, JavaScript courses to receive technical diploma in web development. Expected date of completion: July 2022</p>
+            <p class="lead">	Participated in a twelve weeks of Junior Web Developer program spending eight hours a day Monday to Friday at Generation USA: 
+              by taking HTML, CSS and JavaScript. Received certificate of completion in Junior Web Developer program<a href = "https://drive.google.com/file/d/11BbDNXe8VJ9kxEt2EUhqhvDLZHVA0Ymj/view?usp=sharing"> click here to view the certificate</a></p>
           </div>
     </div>
      
-    <h1 class="text-center fade-in text-white" id="project">Projects</h1>
-    <a  href="https://github.com/Kelbore/JWD-final-project">
+    <h1 class="fade-in text-white" id="project">Projects</h1>
+    <a  href="https://kelbore.github.io/JWD-final-project/">
      <div class="card border-danger slide-in from-left work1" id="firstProject">
        <div class="card-body">
          <h5 class="card-title">Task Manager</h5>
@@ -162,11 +170,11 @@
        </div>
      </div>
     </a>
-   <a href="https://github.com/Kelbore/portfolio-project">
+   <a href="https://kelbore.github.io/portfolio-project/">
      <div class="card border-danger slide-in from-right"  id="secondProject">
        <div class="card-body">
          <h5 class="card-title">Portfolio</h5>
-         <p class="card-text">This is professional portfolio template to show case experience.</p>
+         <p class="card-text">Professional portfolio template.</p>
        </div>
      </div>
    </a>
@@ -178,7 +186,7 @@
       <ul>
         <li id="footer-linkedin"> <a href = "https://linkedin.com"><i class="fab fa-linkedin"></i></a></li>
         <li id="footer-github"> <a href="https://github.com"><i id="fa-github"class="fa-brands fa-github-square"></i></a></li>
-        <li id="footer-email"><i class="fa-solid fa-envelope"></i></li>
+        <li id="footer-email"> <a href="https://mail.yahoo.com/d/folders/1"><i class="fa-solid fa-envelope"></i></a></li>
         <li id="footer-twitter">  <a href="https://twitter.com/home"><i class="fab fa-twitter"></i></a></li>
       </ul>
     </div>
